# SITL_Models

./: README.md  readme.md  readme_en.md
Gazebo/: CMakeLists.txt  package.xml
Gazebo/config/: bicopter.param  catamaran.param  hexapod_copter.param  mini_talon_vtail.param  minihawk_vtol.param  omni3rover.param  omni4rover.param  omnicopter-k_tau=0.01085.param  omnicopter-rf.param  omnicopter-zero-torque.param  omnicopter.param  pik_20b_sailplane.param  r1_rover.param  sawppy.param  skycat_tvbs.param  skywalker_x8.param  swan_k1_hwing.param  wsc_aircraft.param
Gazebo/docs/: AionR1.md  AltiTransition.md  BiCopter.md  BlueBoat.md  Catamaran.md  DAF_XF_450_Tractor.md  HexapodCopter.md  Omni3Rover.md  OmniXRover.md  Omnicopter.md  Pik-20B_Sailplane.md  Quadruped.md  RoverPlayPen.md  Sawppy.md  SkyCatTVBS.md  SkywalkerX8.md  Swan-K1.md  WeightShiftAircraft.md  WildThumper.md  X-UAV_Mini_Talon.md
Gazebo/launch/: mavproxy-multi-vehicle.sh  runway-alti_transition_quad.sh  runway-daf_xf_450_tractor.sh  sonoma-skywalker_x8_quad.sh  sonoma-truck.sh  sonoma-wildthumper.sh  truck-quadplane-landing.sh
Gazebo/missions/: sonoma-quadplane.txt  sonoma-rover.txt  wildthumper_playpen_mission.txt
Gazebo/models/RealSense_D435/: model.config  model.sdf
Gazebo/models/alti_transition_quad/: model.sdf  model.sdf.erb
Gazebo/models/bicopter/: model.config  model.sdf
Gazebo/models/bicopter_with_ardupilot/: model.config  model.sdf
Gazebo/models/blueboat/: model.config  (+1 more)
Gazebo/scripts/: 6DoF_roll_pitch.lua  Motors_6DoF_k_tau=0.00000.lua  Motors_6DoF_k_tau=0.01085.lua  Motors_6DoF_no_torque.lua  Motors_6DoF_zero_torque.lua  hexapod_copter.lua  quadruped.lua  sawppy_motor_mixer.lua
Gazebo/worlds/: alti_transition_runway.sdf  bicopter_runway.sdf  catamaran_waves.sdf  daf_truck_runway.sdf  hexapod_copter_runway.sdf  minihawk_runway.sdf  omnicopter_runway.sdf  omnirover_playpen.sdf  quadruped_runway.sdf  r1_rover_runway.sdf  rover_playpen.sdf  sailplane_runway.sdf  sawppy_playpen.sdf  skycat_runway.sdf  skywalker_x8_quad_runway.sdf  skywalker_x8_runway.sdf  sonoma_raceway.sdf  swan_k1_hwing_runway.sdf  truck_quadplane_landing.sdf.erb  vtail_runway.sdf  wildthumper_playpen.sdf  wildthumper_runway.sdf  wsc_aircraft_runway.sdf
(+562 files in other folders)
